syntax = "proto3";

option csharp_namespace = "BF.IY.P2P.Node";

package auction;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Auctioner {
  rpc MessageGateway(stream ClientRequest) returns (stream ServerResponse);
}

message ClientRequest {
  oneof request {
	JoinAuction join_auction = 1;
	CreateAuctionRequest auction_create_request = 2;
	BidRequest bid_request = 3;
	BidAcceptedRequest bid_accepted_request = 4;
	AuctionCloseRequest auction_close_request = 5;	
  }
}

message JoinAuction {
  int32 client_id = 1;
}
message CreateAuctionRequest {
 int32 client_id = 1;  
 string item_name = 2;
 double item_price = 3;
 string auction_name = 4;
}

message BidRequest {
 int32 bidding_client_id = 1;    
 int32 auction_creater_client_id = 2;   
 string item_name = 3;
 double item_price = 4;
 double bid_price = 5;  
 string auction_name = 6;
}

message BidAcceptedRequest {
 int32 bidding_client_id = 1; 	
 int32 auction_creater_client_id = 2;   
 double accepted_price = 3;
 bool accepted = 4;
 string auction_name = 5;	
}
message AuctionCloseRequest {
 string auction_name = 1;
}

message ServerResponse {
  oneof response {
	JoinAuctionResponse join_response = 1;
	AuctionCreatedResponse auction_created_response = 2;
	BidReceivedResponse bid_response = 3;
	BidAcceptedResponse bid_accepted_response = 4;
	AuctionCloseResponse auction_close_response = 5;	
  }
}

message JoinAuctionResponse {
	string my_name = 1;	
}

message AuctionCreatedResponse {
  
 int32 client_id = 1;	  
 string item_name = 2;
 double item_price = 3;
 string auction_name = 4;
}

message BidReceivedResponse {
  
 int32 bidding_client_id = 1;	  
 int32 auction_creater_client_id = 2;   
 string item_name = 3;
 double item_price = 4;
 double bid_price = 5;  
 string auction_name = 6;
}

message BidAcceptedResponse {
  
 int32 bidding_client_id = 1;  
 int32 auction_creater_client_id = 2;   
 string item_name = 3;
 double accepted_bid_price = 4;  
 string auction_name = 5;
  

}

message AuctionCloseResponse {
	string auction_name = 1;
}